--- a/fundo001.html
+++ b/fundo001.html
@@ -6,55 +6,54 @@
 	<title>Teste de imagem de fundo</title>
 
 	<style>
-div.bloco{
-	background-image: url(imagens/wallpaper003.jpg);
-	height: 200px;
-	border: 1px solid black;
-	margin: 10px;
-	border-radius: 10px;
+body{
+	height: 100vh;
+	background-color: black;
+	background-image: url(imagens/wallpaper002.jpg);
+	background-position: center top;
+	background-repeat:no-repeat;
+	background-size:cover;
 }
+main{
+	background-color: white;
+	width: 300px;
+	padding: 10px;
+	margin: auto;
+	border: solid 1px darkblue;
+	border-radius: 15px;
 
-div#q1{
-	background-position: left top;
 }
-
-div#q2{
-	background-position: left center;
-}
-
-div#q3{
-	background-position: right bottom;
-}
-
-
-div#q4{
-	background-position: center center ;
-}
-
-	
-
-
 
 
 
 	</style>
 </head>
 <body>
-	<div class="bloco" id="q1">
-		
-	</div>
+	
+	<main>
+		<h1>Teste de imagem de Fundo</h1>
+		<p>akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+			akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
+		akdfkdjsfkjdfkjdkfjdkfjkdjfkdjfkdf
 
-	<div class="bloco" id="q2">
-		
-	</div>
-
-	<div class="bloco" id="q3">
-		
-	</div>
-
-	<div class="bloco" id="q4">
-		
-	</div>
+		</p>
+	</main>
 
 </body>
 </html>
